<resources>

    <string name="app_name">Wild Quizz</string>
    <string name="login">Email</string>
    <string name="password">Mot De Passe</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot De Passe</string>
    <string name="confirmer_mot_de_passe">Confirmer Mot de Passe</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="name_text_join_quiz">Veuillez entrer l\'identifiant d\'un quizz</string>
    <string name="text_button_join">Participer à un Quizz</string>
    <string name="text_button_create">Créer un Quizz</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="text_username">Username</string>
    <string name="text_score">Score :</string>
    <string name="score_value">...</string>
    <string name="title_join_quizz">Participer à un quizz</string>
    <string name="accueil">Accueil</string>
    <string name="join_quiz">Participer à un quizz</string>
    <string name="create_quiz">Créer un quizz</string>
    <string name="my_profile">Mon profil</string>
    <string name="display_quiz">Afficher les Quizzs joués</string>
    <string name="logout">Se déconnecter</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="question">Question</string>
    <string name="answer4">Answer4</string>
    <string name="answer3">Answer3</string>
    <string name="answer2">Answer2</string>
    <string name="answer1">Answer1</string>
    <string name="text_mesquizz">Mes Quizz</string>
    <string name="id_quizz">#id Quizz</string>
    <string name="average">Moyenne</string>
    <string name="note_quizz">Note Quizz</string>
    <string name="ex_fur2">Ex: #FUR2</string>
    <string name="answer_qcm_2">Réponse n°2</string>
    <string name="answer_qcm_3">Réponse n°3</string>
    <string name="answer_qcm_1">Réponse n°1</string>
    <string name="answer_qcm_4">Réponse n°4</string>
    <string name="valider">Valider</string>
    <string name="nom_du_qcm">Nom du QCM :</string>
    <string name="cr_er_son_quizz">Créer son Quizz</string>
    <string name="id">Identifiant :</string>
    <string name="ex_128">Ex : #128</string>
    <string name="title_resultats">Résultats</string>
    <string name="text_qcm_results">QCM</string>
    <string name="text_points">Points :</string>
    <string name="text_good_answer">Réponse 2</string>
    <string name="text_score_results">Score</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">Mes informations</string>
    <string name="tab2">Rechercher des amis</string>
    <string name="tab3">Notifications</string>
    <string name="name_tab1">Mes informations</string>
    <string name="name_tab2">Chercher des amis</string>
    <string name="name_tab3">Notifications</string>
    <string name="john_doe">john_doe</string>
    <string name="level">Niveau</string>
    <string name="nb_points_150">150 pts</string>
    <string name="nb_points_50">50 pts</string>
    <string name="nb_points_100">100 pts</string>
    <string name="nb_points_200">200 pts</string>
    <string name="quizz">Quizz  #%d</string>
    <string name="nom_qcm">Nom du Qcm</string>
    <string name="ex_automobile">Ex : Automobile</string>
    <string name="question_1">Question</string>
    <string name="rep1">Ex: Quelle est la voiture la plus performante?</string>
    <string name="ex_porsche_turbo_s">Ex: Porsche Turbo S</string>
    <string name="answer2_update_dialog">Réponse n°2</string>
    <string name="ex_bmw_m3">Ex: Bmw M3</string>
    <string name="answer3_update_dialog">Réponse n°3</string>
    <string name="ex_audi_rs4">Ex: Audi RS4</string>
    <string name="answer4_update_dialog">Réponse n°4</string>
    <string name="ex_mercedes_sl_55_amg">Ex: Mercedes SL 55 AMG</string>
    <string name="answer1_update_dialog">Réponse n°1</string>
    <string name="update">Mettre à jour</string>
    <string name="delete">Supprimer</string>
    <string name="identifiant_du_quizz">Identifiant du quizz</string>
    <string name="ex_aa123ee">Ex : aa123EE</string>
    <string name="politique">Ex : Politique</string>
    <string name="stay_connected">Rester connecté</string>
    <string name="forgotten_password">Mot de passe oublié ?</string>
    <string name="enter_email_and_password">Veuillez entrer votre email et votre mot de passe</string>
    <string name="incorrect_email_and_password">Email et/ou mot de passe incorrects</string>
    <string name="registration_success">Inscription réussite</string>
    <string name="registration_impossible">Impossible de s\'inscrire, veuillez réessayer ultérieurement</string>
    <string name="fields_required">Veuillez renseigner les champs obligatoires</string>
    <string name="password_differents">Vous n\'avez pas renseigné le même mot de passe</string>
    <string name="reset_password_indication">Si vous souhaiter réinitialiser votre mot de passe, renseigner votre email ci-dessous et cliquer sur le bouton</string>
    <string name="change_pass_btn">changer mon mot de passe</string>
    <string name="return_btn">Retour</string>
    <string name="email">Email</string>
    <string name="enter_email_please">Renseigner votre email s\'il vous plaît !</string>
    <string name="email_send">Email envoyé</string>
    <string name="unknow_email">Email inconnu</string>
    <string name="need_camera">L\'application WildQuizz a besoin d\'utiliser la caméra.</string>
    <string name="need_storage">L\'application WildQuizz a besoin d\'accéder au Stockage.</string>
    <string name="update_qcm">Updating Qcm</string>
    <string name="qcm_update_success">Qcm update successfully!!</string>
    <string name="updated_qcm">Votre QCM a été mis à jour</string>
    <string name="mes_quizz">Mes quizzs créés</string>
    <string name="title_menu_activity">Accueil</string>
    <string name="title_create_quizz">Créer un quizz</string>
    <string name="title_profile">Mon profil</string>
    <string name="title_create_qcm">Créer un QCM</string>
    <string name="title_display_quizz_played">Afficher les quizzs joués</string>
    <string name="edit_qcm">Editer le Qcm</string>
    <string name="theme">Thème</string>
    <string name="reponse_correcte">Réponse correcte</string>
    <string name="suppression_qcm">Le Qcm a été bien supprimé</string>
    <string name="theme2">Thème</string>
    <string name="limit_create_quizz">la limite de création de Qcm a été atteinte!</string>
    <string name="fill_all">Remplissez tous les champs s\'il vous plaît!!</string>
    <string name="score">Score</string>
    <string name="scoretext">Score : %s</string>
    <string name="title_quizz_results">Résultats du quizz</string>
    <string name="advertissement_not_connected">L\'application WilQuizz doit être connectée à internet pour vous authentifier.</string>
    <string name="indic_listvide">Vous devez créer au moins 1 Qcm et le valider avant de revenir à l\'écran précédent.</string>
    <string name="empty_liste">Pour créer un quizz, vous devez renseigner au moins 1 Qcm s\'il vous plaît.</string>
    <string name="pass_numberletter">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="change_avatar">Changer mon avatar</string>
    <string name="text_change_avatar">Pour changer votre avatar, il vous faut choisir une autre photo depuis votre appareil :</string>
    <string name="camera_photo">Prendre une photo depuis l\'appareil</string>
    <string name="gallery_photo">Choisir une image depuis la gallerie d\'images</string>
    <string name="edit_username">Editer le nom d\'utilisateur</string>
    <string name="empty_username">Vous ne pouvez pas avoir un nom d\'utilisateur vide</string>
    <string name="points">points</string>
    <string name="id_incorrect">Identifiant de quizz incorrect</string>


</resources>
