<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/header"
    android:padding="20dp">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/pictureprofile"
        app:srcCompat="@drawable/logo_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_score"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_value"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="55dp"/>







</RelativeLayout>