<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wildcodeschool.wildquizz.CreateQcmActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/backwild"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="136dp" />

        <EditText
            android:id="@+id/edit_name_qcm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/theme"
            android:inputType="text"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_question"
            android:layout_width="362dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/question"
            android:inputType="text"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_qcm" />

        <EditText
            android:id="@+id/edit_answer_2"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/answer_qcm_2"
            android:inputType="text"
            android:textColorHint="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_answer_1" />

        <EditText
            android:id="@+id/edit_answer_3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/answer_qcm_3"
            android:inputType="text"
            android:textColorHint="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_answer_2" />

        <EditText
            android:id="@+id/edit_answer_1"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/answer_qcm_1"
            android:inputType="text"
            android:textColorHint="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_question" />

        <EditText
            android:id="@+id/edit_answer_4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/answer_qcm_4"
            android:inputType="text"
            android:textColorHint="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_answer_3" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_question">

            <RadioButton
                android:id="@+id/radiobtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="44dp"
                android:checked="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

            <RadioButton
                android:id="@+id/radiobtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiobtn_1" />

            <RadioButton
                android:id="@+id/radiobtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="44dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiobtn_2" />

            <RadioButton
                android:id="@+id/radiobtn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiobtn_3" />

        </RadioGroup>

        <Button
            android:id="@+id/button_val"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="465dp"
            android:background="@drawable/papyru11"
            android:text="@string/valider"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>
